overflow-x auto to fix scrollbars on firefox/linux

--- a/style/style.scss
+++ b/style/style.scss
@@ -1030,7 +1030,7 @@ img {
         }
         pre {
             max-width: 100%;
-            overflow-x: scroll;
+            overflow-x: auto;
         }
     }
 
